tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_12.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := q;
               x := (1223 DIV x);
               x := (1223 - (x + z));
               q := ((+ x) = (+ 1));
               z := (z + (((1 MOD 1) + (0 + 2)) + 1223));
               r := q;
               x := x;
               y := z;
               r := (0 = 2);
  (* error *)  z := (((1 MOD y) MOD x) DIV (((r DIV 200) * (- 200)) * 0))
END Test20.